fixtures/frontend/milestone-2/invalid/mixed-applicative-cluster/main.aivi
type NamePair = NamePair Text Text

val first:(Option Text) = Some "Ada"
sig last = "Lovelace"

val broken =
 &|> first
 &|> last
  |> NamePair
